<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/linearLayoutStyle" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q1"/>

                    <RadioGroup
                        android:id="@+id/q1_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/q1_answer1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_manOfSteel" />

                        <RadioButton
                            android:id="@+id/q1_answer2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_maskedAvanger" />

                        <RadioButton
                            android:id="@+id/q1_answer3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_redRedeemer" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/linearLayoutStyle" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2"/>

                   <RadioGroup
                       android:id="@+id/q2_radiobutton"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />

                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/q2_hamnite"/>

                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/q2_kryptonite"/>

                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/q2_samsonite"/>

                       <RadioGroup
                           android:id="@+id/q2_radio_button"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content">

                           <RadioButton
                               android:id="@+id/q2_answer1"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/q2_hamnite"/>

                           <RadioButton
                               android:id="@+id/q2_answer2"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/q2_kryptonite"/>

                           <RadioButton
                               android:id="@+id/q2_answer3"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/q2_samsonite"/>

                   </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/linearLayoutStyle" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q3"/>

                    <CheckBox
                        android:id="@+id/q3_kent1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_kent1"/>

                    <CheckBox
                        android:id="@+id/q3_kent2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_kent2"/>

                    <CheckBox
                        android:id="@+id/q3_kent3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_kent3"/>

                    <CheckBox
                        android:id="@+id/q3_kent4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_kent4"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/linearLayoutStyle" >
                    
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q4"/>

                    <EditText
                        android:id="@+id/q3_answer1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textview_hint"
                        android:layout_marginBottom="15dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/container"
        android:onClick="submitAnswer"
        android:text="@string/check_answers_button"/>
</RelativeLayout>
